objects/alm_pm2__Unit_Test_Failure__c.object
<CustomObject>
 <fullName>alm_pm2__Unit_Test_Failure__c</fullName>
 <description>Represents failed unit test methods from a test run</description>
 <fields>
  <fullName>alm_pm2__Apex_Log_Id__c</fullName>
  <externalId>true</externalId>
  <label>Apex Log Id</label>
  <length>18</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Class_Name__c</fullName>
  <description>The class that this method is a member of</description>
  <inlineHelpText>The class that this method is a member of</inlineHelpText>
  <label>Class Name</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Message__c</fullName>
  <description>The error message from the test failure</description>
  <inlineHelpText>The error message from the test failure</inlineHelpText>
  <label>Message</label>
  <length>4000</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Method_Name__c</fullName>
  <description>The name of the test method that failed</description>
  <label>Method Name</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Run_Time__c</fullName>
  <label>Run Time</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Stack_Trace__c</fullName>
  <label>Stack Trace</label>
  <length>4000</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Unit_Test_Summary__c</fullName>
  <description>The summary record that this test error result is a part of.</description>
  <label>Unit Test Summary</label>
  <referenceTo>alm_pm2__Unit_Test_Summary__c</referenceTo>
  <relationshipLabel>Unit Test Failures</relationshipLabel>
  <relationshipName>Unit_Test_Failures</relationshipName>
  <relationshipOrder>0</relationshipOrder>
  <type>MasterDetail</type>
 </fields>
 <label>Unit Test Failure</label>
 <nameField>
  <displayFormat>UT-{00000}</displayFormat>
  <label>Failed Unit Test Name</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>Unit Test Failures</pluralLabel>
 <sharingModel>ControlledByParent</sharingModel>
</CustomObject>